--- a/src/App.css
+++ b/src/App.css
@@ -472,7 +472,7 @@ body {
 	display: inline-block;
 	background: var(--light-color);
 	color: var(--dark-color);
-	padding: 0.8rem 2rem;
+	padding: 1rem 2rem;
 	font-size: 1.8rem;
 	font-weight: 600;
 	border: none;
@@ -480,6 +480,11 @@ body {
 	cursor: pointer;
 	transition: opacity 0.2s ease-in;
 	outline: none;
+}
+
+.capital {
+	font-size: 1.5rem;
+	text-transform: uppercase;
 }
 
 :focus {
