--- a/src/components/MainScreen.css
+++ b/src/components/MainScreen.css
@@ -1,15 +1,15 @@
 :root {
-	--primary-color: #540d6e;
-	--dark-color: #1b2021;
-	--medium-color: #ccc9a1;
-	--brown-color: #a53f2b;
-	--light-color: #f0ffce;
-}
+	--primary-color: #00adb5;
+	--dark-color: #1b2027;
+	--lessdark-color: #283039;
 
+	--medium-color: #fffbad;
+	--light-color: #eeeeee;
+}
 .rectangle-card {
 	display: inline-block;
-	background: linear-gradient(var(--light-color), var(--medium-color));
-	color: var(--dark-color);
+	background: var(--lessdark-color);
+	color: var(--light-color);
 	padding: 4rem 4rem;
 	font-size: 3rem;
 	font-weight: 600;
@@ -17,13 +17,20 @@
 	border-radius: 4rem;
 	cursor: pointer;
 	margin: 3rem 4rem;
-	transition: opacity 0.2s ease-in;
 	outline: none;
 	text-transform: uppercase;
+	transition: transform 0.3s ease-in-out;
 }
 
-.btn:focus,
-.btn:active:focus,
-.btn.active:focus {
-	outline: none;
+.rectangle-card:hover {
+	transform: scale(1.1);
+	animation: button-scale 0.5s 1 forwards;
+}
+
+@keyframes button-scale {
+	0% {
+	}
+	100% {
+		background: var(--medium-color);
+	}
 }
