--- a/src/App.css
+++ b/src/App.css
@@ -217,6 +217,11 @@ img {
 	grid-template-columns: repeat(7, 1fr);
 	grid-gap: 1rem;
 }
+.grid-8 {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-gap: 1rem;
+}
 
 .grid-12 {
 	display: grid;
@@ -441,13 +446,29 @@ table th {
 	display: inline-block;
 	background: linear-gradient(var(--light-color), var(--medium-color));
 	color: var(--dark-color);
-	padding: 5rem 8rem;
-	font-size: 6rem;
+	padding: 5rem 7rem;
+	font-size: 4rem;
 	font-weight: 600;
 	border: none;
 	border-radius: 50%;
 	cursor: pointer;
-	margin: 1.5vh 3.5rem;
+	margin: 4vh 3rem;
+	transition: opacity 1s ease-in;
+	outline: none;
+	text-transform: uppercase;
+}
+
+.round-card-2 {
+	display: inline-block;
+	background: linear-gradient(rgb(198, 239, 255), rgb(79, 120, 197));
+	color: var(--dark-color);
+	padding: 5rem 7rem;
+	font-size: 4rem;
+	font-weight: 600;
+	border: none;
+	border-radius: 50%;
+	cursor: pointer;
+	margin: 4vh 3rem;
 	transition: opacity 1s ease-in;
 	outline: none;
 	text-transform: uppercase;
